# coold-rs

./: Cargo.toml  README.md  config.json  config.toml
examples/: cli_usage.sh
src/: api.rs  cli.rs  daemon.rs  main.rs
