[package]
name = "coold-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
glob = "0.3"
ctrlc = "3.4"
actix-web = "4.4"
actix-rt = "2.9"
env_logger = "0.10"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
